--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "index-colors": "tsx scripts/index-colors.ts"
   },
   "dependencies": {
+    "@mui/base": "5.0.0-beta.40",
+    "clsx": "^2.1.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
