--- a/tsconfig.scripts.json
+++ b/tsconfig.scripts.json
@@ -1,5 +1,6 @@
 {
 	"compilerOptions": {
+		"target": "ES2023",
 
 		// Treat files as modules even if it doesn't use import/export
 		"moduleDetection": "force",
